  - Disable =eglot-inlay-hints-mode= by default.
  - Keybinding =C-c l i= to toggle =eglot-inlay-hints-mode=.
  - Package =fish-mode= for ~fish~ shell scripts editing.
  - Local configuration =yet-source-directory=.
  - Experimental: utilize =company-tooltip-annotation-padding=.
  - Local configuration =yet-explicit-shell-file-name=.

*** Changed:
  - Keybinding =C-c l s= now calls ~M-x eglot~.
  - Keybinding =C-c l d= calls ~M-x eglot-shutdown~.
  - =rust-mode-map= keybinding =C-c C-d= to =C-c t d=.
  - Improve =web-mode= usability.
  - Improve description of emails sending via =SMTP= server.
  - Improve description of emails retrieval from =IMAP= server with =Rmail=.

*** Removed:
  - Do not enable =display-time-mode=.


** v2.1.0 - 2022-11-27

Usability improvements of the existing functionality, with an emphasis on:
- PHP and Rust programming,
- terminal emulator usage,
- org-mode text writing.

*** Added:
  - Hint how to complete email addresses.
  - Package =web-mode=.
  - Keybinding =M-s M-s= for ~M-x isearch-forward-thing-at-point~.
  - More abbrevs to ~init-abbrevs.el~
  - Keybinding =f= to open =xref= definition in the same window.
  - Enable =recentf-mode=. Call with ~M-x recent-open*~.
  - Keybinding =C-c t s= to start terminal emulator.
  - Keybinding =C-c b w= to toggle =whitespace-mode=.
  - Keybinding =C-c l a= to call ~M-x eglot-code-actions~.
  - Configure ~diff-whitespace-style~ (since Emacs 29).
  - Add =racket-mode= package for [[https://racket-lang.org][Racket language]].

*** Changed:
  - Improve =rust-mode= usability.
  - Improve =php-mode= usability.
  - Improve editing and search usability.
  - Configure =xref= to use =ripgrep= when it's available.
  - Better =term-mode= usability.
  - Replace =global-goto-address-mode= by local enabling.
  - Swap =org-mode= default keybindings =RET= and =C-j=.
  - Improve =diff-mode= usability.

*** Removed:
  - Fallback =tab-always-indent= to its default value of =t=.