@@ -15,6 +15,7 @@
   - Local configuration =yet-source-directory=.
   - Experimental: utilize =company-tooltip-annotation-padding=.
   - Local configuration =yet-explicit-shell-file-name=.
+  - Docstrings to ~yet-~ namespaced constants in ~/examples/local-pre-init.el~.
 
 *** Changed:
   - Keybinding =C-c l s= now calls ~M-x eglot~.
